Admin: prevent broken list-table layouts.
This change adds CSS that targets forum/topic/reply list-table heads & foots.

It allows text – that is both unbreakable & wider than its parent th/td – to truncate with an ellipsis.

This is necessary because the default behavior is to continue to squish text down to an unreadable state, which happens frequently here due to the number of columns in the tables and the amount of content available inside of them to Keymasters & Moderators.

In branches/2.6, for 2.6.10.

git-svn-id: https://bbpress.svn.wordpress.org/branches/2.6@7261 9866e705-20ec-0310-96e7-cbb4277adcfb

--- a/src/includes/admin/assets/css/admin.css
+++ b/src/includes/admin/assets/css/admin.css
@@ -320,6 +320,35 @@ body.post-type-reply strong.label {
 	width: 60px;
 }
 
+body.post-type-forum .wp-list-table thead th a,
+body.post-type-forum .wp-list-table tfoot th a,
+body.post-type-topic .wp-list-table thead th a,
+body.post-type-topic .wp-list-table tfoot th a,
+body.post-type-reply .wp-list-table thead th a,
+body.post-type-reply .wp-list-table tfoot th a {
+	display: flex;
+}
+
+body.post-type-forum .wp-list-table thead th:not(.sortable),
+body.post-type-forum .wp-list-table tfoot th:not(.sortable),
+body.post-type-forum .wp-list-table thead th a > span:first-child,
+body.post-type-forum .wp-list-table tfoot th a > span:first-child,
+body.post-type-forum .wp-list-table tbody td,
+body.post-type-topic .wp-list-table thead th:not(.sortable),
+body.post-type-topic .wp-list-table tfoot th:not(.sortable),
+body.post-type-topic .wp-list-table thead th a > span:first-child,
+body.post-type-topic .wp-list-table tfoot th a > span:first-child,
+body.post-type-topic .wp-list-table tbody td,
+body.post-type-reply .wp-list-table thead th:not(.sortable),
+body.post-type-reply .wp-list-table tfoot th:not(.sortable),
+body.post-type-reply .wp-list-table thead th a > span:first-child,
+body.post-type-reply .wp-list-table tfoot th a > span:first-child,
+body.post-type-reply .wp-list-table tbody td {
+	overflow-x: hidden;
+	text-overflow: ellipsis;
+	word-wrap: normal;
+}
+
 .column-bbp_forum_topic_count,
 .column-bbp_forum_reply_count,
 .column-bbp_topic_reply_count,
